[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goal-agent"
version = "0.1.0"
description = "AI-powered goal and habit tracking agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "uvicorn[standard]>=0.30",
    "uvloop>=0.21",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "alembic>=1.15",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "pygithub>=2.5",
    "python-telegram-bot>=20.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",       # in-memory SQLite for tests (no MariaDB needed)
    "anyio>=4.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
# Python version is pinned in [project] requires-python = ">=3.12"
# No additional [tool.uv] config needed for uv >= 0.5.x

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths  = ["tests"]
addopts    = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # long lines handled by formatter
    "E712",   # equality comparison to True - pre-existing
    "F401",   # unused imports - pre-existing in codebase
    "F541",   # f-string without placeholders - pre-existing
    "UP006",  # Use type instead of Type - pre-existing
    "UP007",  # Use X | Y - pre-existing
    "UP035",  # collections.abc - pre-existing
    "UP042",  # enum.StrEnum - pre-existing
    "UP045",  # typing.Union - pre-existing
    "UP046",  # typing.Generic - pre-existing
    "B008",   # Depends in defaults - FastAPI pattern
    "SIM108", # ternary operator - pre-existing
    "I001",   # import sorting - pre-existing
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
